# stapel-currencies

./: CHANGELOG.md  CONFIG.MD  CONTRIBUTING.md  MODULE.md  README.md  SECURITY.md  __init__.py  admin.py  apps.py  checks.py  conf.py  conftest.py  errors.py  functions.py  models.py  providers.py  pyproject.toml  serializers.py  services.py  tasks.py  urls.py  urls_v1.py  views.py
.github/workflows/: ci.yml  publish.yml
docs/: capabilities.json
management/commands/: load_default_currencies.py  update_exchange_rates.py
migrations/: 0001_initial.py
schemas/functions/: currencies.convert.json
tests/: fakes.py  test_api.py  test_checks.py  test_commands.py  test_convert.py  test_function.py  test_models.py  test_providers.py  test_public_api.py  test_tasks.py  test_update_rates.py  urls.py
