[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stapel-currencies"
version = "0.1.0"
description = "Currencies and exchange rates for the Stapel framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["django", "stapel", "currencies"]
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "stapel-core>=0.3.0,<0.4",
    "celery>=5",
    "requests>=2.28",
]

[project.optional-dependencies]
all = []

[tool.setuptools]
package-dir = {"stapel_currencies" = "."}
packages = [
    "stapel_currencies",
    "stapel_currencies.migrations",
    "stapel_currencies.management",
    "stapel_currencies.management.commands",
    "stapel_currencies.tests",
]

[tool.setuptools.package-data]
stapel_currencies = ["py.typed", "migrations/*.py", "schemas/**/*.json"]

[tool.pytest.ini_options]
django_find_project = false
addopts = "--tb=short -q --import-mode=importlib"

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/migrations/*",
]
